# clang-python-fpcast-plugin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.circleci/: config.yml
include/: MyPlugin.h  PyFpcastRemover.h
lib/: MyPlugin.cpp  PyFpcastRemover.cpp
test/: .lit_test_times.txt  getset.c  lit.cfg.py  meth_noargs.c  python_stubs.h  test.c
